# Postgresql-Signature-Index-Implementation

./: .gitignore  CMakeLists.txt  R.bsig  R.data  R.info  R.psig  R.tsig  README.md  bits.c  bsig.c  create  dump  gendata  insert  psig.c  query.c  reln.c  select  stats  tsig.c  x1  x1.c  x2  x2.c  x3
Postgresql-Signature-Index-Implementation/: CMakeLists.txt  R.bsig  psig.c
postgresql_signature_index_implementation/: ass2.tar  bsig.c
